--- a/destinations.html
+++ b/destinations.html
@@ -59,7 +59,7 @@
     <!-- Page Title -->
     <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/travel/destination-page-bg.jpg);">
       <div class="container position-relative page-header">
-        <h1>Destinations.</h1>
+        <h1>destinations.</h1>
       </div>
     </div>
 
