--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
     <!-- Page Title -->
     <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/travel/showcase-8.webp);">
       <div class="container position-relative page-header">
-            <h1>About.</h1>
+            <h1>about.</h1>
       </div>
     </div><!-- End Page Title -->
 
