--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
     <!-- Page Title -->
     <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/travel/showcase-3.webp);">
       <div class="container position-relative page-header">
-        <h1>Get In Touch.</h1>
+        <h1>get in touch.</h1>
         
       </div>
     </div><!-- End Page Title -->
@@ -125,7 +125,7 @@
       <!-- Google Maps (Full Width) -->
       <div class="map-section" data-aos="fade-up" data-aos-delay="200">
         <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3580.860847739968!2d28.00596531502784!3d-26.17235598345461!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e950c1a6d5e5e5f%3A0x3a8b2c9b1a1a1a1a!2sCedar%20Square%2C%20Cedar%20Rd%2C%20Fourways%2C%20Johannesburg%2C%202068!5e0!3m2!1sen!2sza!4v1712345678901!5m2!1sen!2sza" 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3585.5273649968423!2d27.99405157549285!3d-26.022142377168534!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95740d10f62b3d%3A0xa64e43196a1c2e7c!2sCedar%20Square!5e0!3m2!1sen!2sza!4v1720707903162!5m2!1sen!2sza" 
           width="100%" 
           height="500" 
           style="border:0;" 
