--- a/tours.html
+++ b/tours.html
@@ -67,7 +67,7 @@
     <!-- Page Title -->
     <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/travel/tour-page-bg.jpg);">
       <div class="container position-relative page-header">
-        <h1>Tours.</h1>
+        <h1>tours.</h1>
          
       </div>
     </div><!-- End Page Title -->
